# stock-doctor

./: .gitattributes  .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/schemas/: diagnosis.py
backend/app/services/: akshare_provider.py  alerts.py  concept_heat.py  data_connectors.py  data_quality.py  diagnosis.py  diagnosis_change.py  eastmoney_provider.py  hotspot_brief.py  hotspot_candidates.py  hotspot_review_actions.py  industry_heat.py  local_stock_directory.py  market_data.py  momentum_signals.py  notes.py  peers.py  portfolio_risk.py  price_alerts.py  provider_factory.py  providers.py  refresh_jobs.py  refresh_scheduler.py  reports.py  review_actions.py  risk_exposure.py  screener.py  storage.py  strategy_backtest.py  strategy_backtest_actions.py  strategy_backtest_history.py  symbols.py  tdx_local_provider.py  thesis.py  timeline.py  trend.py  tushare_provider.py
backend/tests/: test_alerts.py  test_api.py  test_concept_heat.py  test_data_connectors.py  test_data_quality.py  test_diagnosis.py  test_diagnosis_change.py  test_hotspot_brief.py  test_hotspot_candidates.py  test_hotspot_review_actions.py  test_industry_heat.py  test_momentum_signals.py  test_notes.py  test_portfolio_risk.py  test_price_alerts.py  test_provider_factory.py  test_refresh_jobs.py  test_reports.py  test_review_actions.py  test_risk_exposure.py  test_screener.py  test_sqlite_storage.py  test_storage.py  test_strategy_backtest.py  test_thesis.py  test_timeline.py  test_trend.py
(+128 files in other folders)
